--- a/estilos/vars.css
+++ b/estilos/vars.css
@@ -4,5 +4,6 @@
     
     /*colors*/
     --bg-icon: #131313;
-    --bg-arrow-color: rgba(0,0,07)
+    --bg-arrow-color: rgba(0,0,07);
+    --text-base-light: #b3b3b3;
 }
